[gd_scene load_steps=14 format=3 uid="uid://0083x7i7r7y4"]

[ext_resource type="Texture2D" uid="uid://c2k7h6tftg6lf" path="res://Assets/batspritesheet.png" id="1_0go81"]
[ext_resource type="Script" path="res://Enemies/Scenes/BatBullet.gd" id="1_ek7gm"]
[ext_resource type="Texture2D" uid="uid://chu2acdknc5l3" path="res://Assets/batlight.png" id="2_xdmum"]
[ext_resource type="AudioStream" uid="uid://dntxi14gjmouo" path="res://Assets/Sounds/batHurt.wav" id="4_d8wx1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r548b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2km3l"]
radius = 8.5

[sub_resource type="AtlasTexture" id="AtlasTexture_fp0b0"]
atlas = ExtResource("1_0go81")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_er4q3"]
atlas = ExtResource("1_0go81")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3ygw"]
atlas = ExtResource("1_0go81")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kvo45"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp0b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er4q3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3ygw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_c75e1"]
radius = 14.0

[sub_resource type="Animation" id="Animation_yw7jk"]
resource_name = "batDeath"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 200)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AnimatedSprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 3.13834),
"update": 0,
"values": [0.0, 1.5708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_16pew"]
_data = {
"batDeath": SubResource("Animation_yw7jk")
}

[node name="Bat" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_ek7gm")
batSpeed = 600
knockbackForce = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r548b")

[node name="EnemyBat" type="Node2D" parent="."]

[node name="BatDamageArea" type="Area2D" parent="."]
scale = Vector2(2, 2)
collision_layer = 4

[node name="DealDamageBox" type="CollisionShape2D" parent="BatDamageArea"]
shape = SubResource("CircleShape2D_2km3l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_kvo45")
autoplay = "default"
frame = 1
speed_scale = 1.5

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
scale = Vector2(2, 2)
color = Color(0.174352, 2.1731e-05, 0.174904, 1)
texture = ExtResource("2_xdmum")

[node name="BatTakeDamageArea" type="Area2D" parent="."]
collision_mask = 2

[node name="TakeDamageBox" type="CollisionShape2D" parent="BatTakeDamageArea"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_c75e1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../EnemyBat")
libraries = {
"": SubResource("AnimationLibrary_16pew")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 25.0
autostart = true
[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_d8wx1")
volume_db = 1.0

[connection signal="body_entered" from="BatDamageArea" to="." method="_on_bat_damage_area_body_entered"]
[connection signal="body_entered" from="BatDamageArea" to="EnemyBat" method="_on_bat_damage_area_body_entered"]
[connection signal="area_entered" from="BatTakeDamageArea" to="." method="_on_bat_take_damage_area_area_entered"]
[connection signal="area_entered" from="BatTakeDamageArea" to="EnemyBat" method="_on_bat_take_damage_area_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="EnemyBat" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
